added accordion component

--- a/src/app/collapse/components/collapse/collapse.component.html
+++ b/src/app/collapse/components/collapse/collapse.component.html
@@ -1,3 +1,3 @@
-<div class="collapse-content" *ngIf="open">
+<div class="collapse-content" *ngIf="open" @collapse>
   <ng-content></ng-content>
 </div>
