--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
     commodo ligula eget dolor. Aenean massa.
   </app-collapse-menu>
 
-  <app-collapse-menu #collapse (collapseChange)="onCollapseChange($event)">
+  <app-collapse-menu #collapse>
     <header *appCollapseMenuHeader="let open" class="d-flex justify-content-between">
       <div class="custom-header">Some custom title 🥳</div>
       <a href="#"
@@ -40,4 +40,52 @@
 
     <a href="#" (click)="$event.preventDefault(); collapse.closeCollapse()">Done</a>
   </app-collapse-menu>
+
+  <hr>
+
+  <h1>Accordion</h1>
+
+  <button class="btn btn-sm btn-outline-primary" (click)="showElement = !showElement">Hide/Show</button>
+  <button class="btn btn-sm btn-outline-primary" (click)="accordion.closeAll()">Close all</button>
+
+  <div class="mt-3">
+    <app-accordion #accordion>
+      <p>sdfsdfdsf</p>
+      <app-collapse-menu title="Test 1">
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+      </app-collapse-menu>
+      <app-collapse-menu title="Test 2">
+        Lorem ipsum dolor sit amet,
+        consectetuer adipiscing elit.
+        Aenean commodo ligula eget dolor. Aenean massa.
+      </app-collapse-menu>
+      <app-collapse-menu title="Test 3" *ngIf="showElement">
+        <img class="img-fluid" src="https://musiquedepot.ca/pub/media/catalog/product/cache/10f519365b01716ddb90abc57de5a837/1/3/1303-red_l.jpg">
+      </app-collapse-menu>
+      <app-collapse-menu #collapse2>
+        <header *appCollapseMenuHeader="let open" class="d-flex justify-content-between">
+          <div class="custom-header">Some custom title 🥳</div>
+          <a href="#"
+             *ngIf="open" class="custom-header"
+             (click)="$event.preventDefault(); collapse2.closeCollapse()"><i class="fa fa-times"></i>
+          </a>
+          <a href="#" *ngIf="!open" class="custom-header"
+             (click)="$event.preventDefault(); collapse2.openCollapse()">Open</a>
+        </header>
+
+        Lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean
+        commodo ligula eget dolor. Aenean massa.
+
+        <a href="#" (click)="$event.preventDefault(); collapse2.closeCollapse()">Done</a>
+      </app-collapse-menu>
+      <app-collapse-menu title="Test 4">
+        Lorem ipsum dolor sit amet,
+        consectetuer adipiscing elit.
+        Aenean commodo ligula eget dolor. Aenean massa.
+      </app-collapse-menu>
+
+      <p>Some other content will not get projected onto the accordions view</p>
+    </app-accordion>
+  </div>
 </div>
